# CodeRepo

./: .gitignore  CMakeLists.txt  README.md  main.c
C_demo/C_demotest/: main.c
C_demo/LinearList/: LinearList.c
C_demo/demo6/: main.c
cpp/LongestCommonPrefix/: main.cpp
cpp/Palindrome/: CMakeLists.txt  main.cpp
cpp/ReverseInteger/: main.cpp
cpp/RomantoInteger/: main.cpp
cpp/TwoSum/: main.cpp
cpp/ValidParentheses/: main.cpp
include/: kiri_case.h  kiri_func.h  kiri_log.h  kiri_timer.h  macro.h  vtk_writer.h
include/fbs/: fbs_sample.h
scripts/: build.bat
src/: LinearList.cpp  kiri_log.cpp  main.cpp  stack.cpp  vtk_writer.cpp
